align checkbox/radio inputs, fix disabled status, fix sticky nav display issues

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -111,3 +111,10 @@ a {
 .Toastify__toast--default a:hover {
   opacity: 0.8;
 }
+
+/* ANT RADIO / CHECKBOX OVER-RIDES */
+.ant-radio,
+.ant-checkbox {
+  top: 0.1em !important;
+  margin-right: 4px !important;
+}
